@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package "Storage" {
  interface Tokenizer {
    + tokenize(ArrayList<T>)
    + detokenize(ArrayList<String>)
  }

  class AtomicHabitTokenizer {
    - splitTokenizedHabitIntoParameter(String)
    - convertToBase(String)
    - removeDuplicatedHabits(ArrayList<AtomicHabit>)
    - parseTokenizedHabit(String)
    + tokenize(ArrayList<AtomicHabit>)
    + detokenize(ArrayList<String>)
  }

  class ReflectionTokenizer {
    - getTokenizedIndexes(String, Set<Integer>)
    - splitParameter(String, String)
    - splitTokenizedIndex(String)
    - validateTokenizedIndexFormat(ArrayList<String>, int, String)
    - getSet(String, String)
    + tokenize(ArrayList<Set<Integer>>)
    + detokenize(ArrayList<String>)
  }

  class GamificationTokenizer {
    + tokenize(ArrayList<GamificationData>)
    + detokenize(ArrayList<String>)
  }
}

Tokenizer <|-- AtomicHabitTokenizer
Tokenizer <|-- ReflectionTokenizer
Tokenizer <|-- GamificationTokenizer
@enduml
